# Sound-Processing

./: Lab2.ipynb
lab1/: README.md  THEORY.md  pyproject.toml
lab1/src/signal_lab/: __init__.py  analysis.py  audio_io.py  config.py  filters.py  noise.py  notebook_display.py  pipeline.py  visualization.py
