[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sound-processing-lab1"
version = "0.1.0"
description = "Лабораторная работа 1 по обработке и анализу звуковых сигналов"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy>=1.26,<3.0",
    "scipy>=1.11,<2.0",
    "librosa>=0.10,<1.0",
    "soundfile>=0.12,<1.0",
    "matplotlib>=3.8,<4.0",
    "seaborn>=0.13,<1.0",
    "plotly>=5.20,<6.0",
    "PyWavelets>=1.5,<2.0",
    "ipython>=8.18,<9.0",
    "ipykernel>=6.29,<7.0",
    "jupyterlab>=4.0,<5.0",
]

[tool.poetry]
package-mode = false

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
